--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -41,10 +41,10 @@
             }
 
             &.section-out-standing-doctor {
-                background-image: url("../../assets//images/OutStandingDoctor/logo-menhalth.png");
-                width           : 120px;
-                height          : 120px;
-                border-radius   : 50%;
+                // background-image: url("../../assets//images/OutStandingDoctor/logo-menhalth.png");
+                width        : 120px;
+                height       : 120px;
+                border-radius: 50%;
 
             }
 
