--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -137,6 +137,7 @@
 .section-out-standing-doctor {
     .section-customize {
         padding: 5px;
+        cursor : pointer;
     }
 
     .customize-border {
