--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -24,6 +24,23 @@
         }
     }
 
+    .create-content-doctor {
+        margin-top   : 20px;
+        margin-bottom: 30px;
+        border-radius: 3px;
+        outline      : none;
+        border       : none;
+        padding      : 5px;
+        background   : rgb(0, 8, 255);
+        cursor       : pointer;
+
+        color: #fff;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
     .more-infor {
         display       : flex;
         gap           : 15px;
