--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -7,12 +7,14 @@
         margin : 0 100px;
 
         .content-left {
-            width        : 20%;
-            background   : center center no-repeat;
-            width        : 150px;
-            height       : 150px;
-            border-radius: 50%;
-            margin       : 10px 20px;
+            width              : 20%;
+            background-size    : cover;
+            background-repeat  : no-repeat;
+            background-position: center;
+            width              : 150px;
+            height             : 150px;
+            border-radius      : 50%;
+            margin             : 10px 20px;
 
         }
 
