--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -33,7 +33,7 @@
             background-color   : #eee;
 
             &.section-specialty {
-                background-image: url("../../assets/images/Specialty/co-xuong-khop.jpg");
+                // background-image: url("../../assets/images/Specialty/co-xuong-khop.jpg");
             }
 
             &.section-medical-facility {
