--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -37,7 +37,7 @@
             }
 
             &.section-medical-facility {
-                background-image: url("../../assets/images/MedicalFacility/lo-go-viet-duc.jpg");
+                // background-image: url("../../assets/images/MedicalFacility/lo-go-viet-duc.jpg");
             }
 
             &.section-out-standing-doctor {
