--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -33,6 +33,10 @@
             .down {
                 padding-top: 10px;
 
+                .like-share-plugin {
+                    margin: 10px 0 20px 0;
+                }
+
             }
 
         }
@@ -61,14 +65,17 @@
         background-color: #ddd;
         padding-right   : 10px;
 
-        padding : 10px 100px h3 {
+        padding: 10px 100px;
+
+        h1,
+        h2 h3 {
             font-size: 17px;
         }
     }
 
 
     .comment-doctor {
-        height: 50px;
+        padding: 10px 100px;
 
     }
 }
